2014-10-30 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Fix typo and update with examples.  Add
	support updates.
	
2014-10-29 Albert Chu <chu11@llnl.gov>

	Merge branch ddr4

	* libfreeipmi/include/freeipmi/record-format/ipmi-fru-dimmspd-record-format.h,
	libfreeipmi/record-format/ipmi-fru-dimmspd-record-format.c,
	libfreeipmi/include/freeipmi/templates/ipmi-fru-dimmspd-record-format-templates.h:
	Add DDR4 SPD FRU support.

	* libfreeipmi/include/freeipmi/spec/ipmi-jedec-manufacturer-identification-code-spec.h,
	libfreeipmi/spec/ipmi-jedec-manufacturer-identification-code-spec.c,
	libfreeipmi/spec/jedec-raw.txt,
	libfreeipmi/util/ipmi-jedec-manufacturer-identification-code-util.c:
	Update jedec manufacturer listings.

	* libfreeipmi/spec/ipmi-iana-enterprise-numbers-spec.c: Update
	IANA manufacturer listings.

	* ipmi-fru/: Support DDR4 module output.  Add extra output to DDR3 modules.
	
2014-10-22  Albert Chu <chu11@llnl.gov>

	* ipmi-chassis/ipmi-chassis-argp.c: Options now require arguments,
	remove OPTION_ARG_OPTIONAL flag in parsing.

	* ipmi-chassis/: Add comments on legacy options.
	
2014-10-21  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/: Fix corner case with empty lines when inputting
	commands via standard in or --file.
	
2014-10-14  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add notes on ipmitool vs ipmi-sensors
	"ok" reading.

2014-08-19 Mark Rusk <mark.rusk@hp.com>

	* libfreeipmi/locate/ipmi-locate-dmidecode.c: Fix multiple UEFI
	bugs.  Remove assumption EFI only works with IA64.  Fix endline
	parse issue.
	
2014-08-14  Albert Chu <chu11@llnl.gov>

	* Support SSIF IPMB bridging.
	
2014-07-15  Markus Blank-Burian <burian@muenster.de>

	* Support Supermicro H8DGU and H8DG6 systems.
	
2014-07-14  Yaroslav Halchenko <debian@onerussian.com>

	* Fix various typos in code and documentation.

2014-07-10  Albert Chu <chu11@llnl.gov>

	* man/libipmiconsole.3.pre.in: Document libipmiconsole.conf manpage.
	